--- a/index.html
+++ b/index.html
@@ -8,14 +8,46 @@
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- STYLESHEET -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-<script src="js/main.js"></script>
+
+  <!-- SITE-HEADER -->
+  <header class="site-header">
+    <div class="site-header-container container">
+      <a class="site-header-logo" href="#">
+        <img class="site-header-logo-img" src="img/apple-logo.svg" alt="apple-logo" width="35" height="42">
+      </a>
+
+      <!-- SITENAV -->
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#">Home</a>
+          </li>
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#">About</a>
+          </li>
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#">Offers</a>
+          </li>
+          <li class="sitenav-item">
+            <a class="sitenav-link" href="#">Services</a>
+          </li>
+
+        </ul>
+
+      </nav>
+      <form class="search-form" action="https://echo.htmlacademy.ru " method="get">
+        <input class="search-form-input" type="search" name="search" placeholder="How can we help you?" aria-label="search" required>
+      </form>
+    </div>
+  </header>
+  <script src="js/main.js"></script>
 </body>
 </html>
